add 2 exact flexible sliding window problems

--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -3,10 +3,24 @@ There are 3 types of flexible sliding window problems:
 1. find longest subarray (maximum length of a substring/subarray)
 2. find shortest subarray (minimum length of a substring/subarray)
 3. find "optimal" subarray
-# [灵神](https://leetcode.cn/discuss/post/3578981/ti-dan-hua-dong-chuang-kou-ding-chang-bu-rzz7/)
+# Reference [灵神](https://leetcode.cn/discuss/post/3578981/ti-dan-hua-dong-chuang-kou-ding-chang-bu-rzz7/)
 
-## Flexible Sliding Window Basis (longest subarray)
-### template
+## 5.2.1 Flexible Sliding Window Basis (longest)
+
+Usually need `ans += left`
+### Template
+```python
+def sliding_window_flexible_longest(input):
+    initialize window, ans
+    left = 0
+    for right in range(len(input)):
+        append input[right] to window
+        while invalid(window):        # update left until window is valid again
+            remove input[left] from window
+            left += 1
+        ans = max(ans, window)        # window is guaranteed to be valid here
+    return ans
+```
 #### Not using hash set
 1. into window
 2. while **invalid**
@@ -390,12 +404,26 @@ class Solution:
         return -1 if res == 0 else n - res
 ```
 
-## Flexible Sliding Window Basis (minimum/shortest)
+## 5.2.2 Flexible Sliding Window Basis (minimum/shortest)
+
+Usually need `ans += right - left + 1`
 ### Template
 1. into window
 2. while **valid**
 	1. update res
 	2. shrink window
+```python
+def sliding_window_flexible_shortest(input):
+    initialize window, ans
+    left = 0
+    for right in range(len(input)):
+        append input[right] to window
+        while valid(window):
+            ans = min(ans, window)      # window is guaranteed to be valid here
+            remove input[left] from window
+            left += 1
+    return ans
+```
 
 | #   | Difficulty                                      | Problems                                                                                                                                                  |                          |                                 |
 | --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------ | ------------------------------- |
@@ -668,4 +696,102 @@ class Solution:
                 if counts[idx] == 0:
                     n += 1
         return [res_left, res_right]
+```
+
+## 5.2.3 Flexible sliding window (Exact)
+For example, to calculate the number of subarrays where the sum of elements equals exactly k, the problem can be transformed as follows:
+
+1. Calculate the number of subarrays where the sum of elements is **≥k**.
+2. Calculate the number of subarrays where the sum of elements is **>k**, i.e., **≥k+1**.
+
+The answer is then the number of subarrays with sums **≥k** minus the number of subarrays with sums **≥k+1**. By converting **>** into **≥**, the sliding window logic can be encapsulated into a single function **f**, allowing us to compute the result as **f(k) - f(k + 1)** without duplicating the sliding window code.
+
+**Summary:** "Exactly" can be split into two "at least" problems—in other words, **two sliding window problems where "longer is more valid."**
+
+**Note:** Alternatively, the problem can be transformed into **≤k** minus **≤k−1** (two "at most" problems). Choose the appropriate transformation based on the problem requirements.
+
+**Note:** Another approach is to merge the two sliding windows by maintaining the same right endpoint **right** and two left endpoints **left₁** and **left₂**. This method is referred to as the **three-pointer sliding window**.
+### Template
+1. initialize two set of values (left, window, res)
+2. `f(k)`: get `>= k` result
+3. `f(k+1)`: get `>= k + 1` result
+4. actual result is `f(k) - f(k+1)`
+
+| #   | Difficulty                                      | Problems                                                                                                                                                              |                                 |
+| --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------- |
+| 1   | <span style="color: orange;">Medium</span> 1592 | [930. Binary Subarrays With Sum](https://leetcode.com/problems/binary-subarrays-with-sum/)                                                                            | <input type="checkbox" checked> |
+| 2   | <span style="color: orange;">Medium</span> 1624 | [1248. Count Number of Nice Subarrays](https://leetcode.com/problems/count-number-of-nice-subarrays/)                                                                 | <input type="checkbox" checked> |
+| 3   | <span style="color: orange;">Medium</span> 2200 | [3306. Count of Substrings Containing Every Vowel and K Consonants II](https://leetcode.com/problems/count-of-substrings-containing-every-vowel-and-k-consonants-ii/) | <input type="checkbox">         |
+| 4   | <span style="color: red;">Hard</span> 2210      | [992. Subarrays with K Different Integers](https://leetcode.com/problems/subarrays-with-k-different-integers/)                                                        | <input type="checkbox">         |
+### [930. Binary Subarrays With Sum](https://leetcode.com/problems/binary-subarrays-with-sum/)
+![[Pasted image 20250502224642.png]]
+```python
+# Input: nums = [1,0,1,0,1], goal = 2
+# Output: 4
+# Explanation: The 4 subarrays are bolded and underlined below:
+# [**1,0,1**,0,1]
+# [**1,0,1,0**,1]
+# [1,**0,1,0,1**]
+# [1,0,**1,0,1**]
+
+# Input: nums = [0,0,0,0,0], goal = 0
+# Output: 15
+class Solution:
+    def numSubarraysWithSum(self, nums: List[int], goal: int) -> int:
+        left1 = window1 = 0
+        left2 = window2 = 0
+        res = 0
+        for right, num in enumerate(nums):
+            window1 += num
+            window2 += num
+            # get sum >= k
+            while left1 <= right and window1 >= goal:
+                window1 -= nums[left1]
+                left1 += 1
+            # get sum >= k + 1
+            while left2 <= right and window2 >= goal + 1:
+                window2 -= nums[left2]
+                left2 += 1
+            # update result
+            # count(sum==k) = count(sum>=k) - count(sum>=k+1)
+            res += left1 - left2
+        return res
+```
+### [1248. Count Number of Nice Subarrays](https://leetcode.com/problems/count-number-of-nice-subarrays/)
+
+```python
+# Input: nums = [1,1,2,1,1], k = 3
+# Output: 2
+# Explanation: The only sub-arrays with 3 odd numbers are [1,1,2,1] and [1,2,1,1].
+
+# Input: nums = [2,4,6], k = 1
+# Output: 0
+# Explanation: There are no odd numbers in the array.
+
+# Input: nums = [2,2,2,1,2,2,1,2,2,2], k = 2
+# Output: 16
+class Solution:
+    def numberOfSubarrays(self, nums: List[int], k: int) -> int:
+        left1 = window1 = 0
+        left2 = window2 = 0
+        res = 0
+        for right, num in enumerate(nums):
+            # into window
+            if num % 2 == 1:
+                window1 += 1
+                window2 += 1
+            # get result >= k
+            while window1 >= k:
+                if nums[left1] % 2 == 1:
+                    window1 -= 1
+                left1 += 1
+            # get result >= k + 1
+            while window2 >= k + 1:
+                if nums[left2] % 2 == 1:
+                    window2 -= 1
+                left2 += 1
+            # update res
+            # odd(k) = odd(>=k) - odd(>=k+1)
+            res += left1 - left2
+        return res
 ```
