add 2 exact flexible sliding window problems

--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -721,8 +721,8 @@ The answer is then the number of subarrays with sums **≥k** minus the number
 | --- | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------- |
 | 1   | <span style="color: orange;">Medium</span> 1592 | [930. Binary Subarrays With Sum](https://leetcode.com/problems/binary-subarrays-with-sum/)                                                                            | <input type="checkbox" checked> |
 | 2   | <span style="color: orange;">Medium</span> 1624 | [1248. Count Number of Nice Subarrays](https://leetcode.com/problems/count-number-of-nice-subarrays/)                                                                 | <input type="checkbox" checked> |
-| 3   | <span style="color: orange;">Medium</span> 2200 | [3306. Count of Substrings Containing Every Vowel and K Consonants II](https://leetcode.com/problems/count-of-substrings-containing-every-vowel-and-k-consonants-ii/) | <input type="checkbox">         |
-| 4   | <span style="color: red;">Hard</span> 2210      | [992. Subarrays with K Different Integers](https://leetcode.com/problems/subarrays-with-k-different-integers/)                                                        | <input type="checkbox">         |
+| 3   | <span style="color: orange;">Medium</span> 2200 | [3306. Count of Substrings Containing Every Vowel and K Consonants II](https://leetcode.com/problems/count-of-substrings-containing-every-vowel-and-k-consonants-ii/) | <input type="checkbox" checked> |
+| 4   | <span style="color: red;">Hard</span> 2210      | [992. Subarrays with K Different Integers](https://leetcode.com/problems/subarrays-with-k-different-integers/)                                                        | <input type="checkbox" checked> |
 ### [930. Binary Subarrays With Sum](https://leetcode.com/problems/binary-subarrays-with-sum/)
 ![[Pasted image 20250502224642.png]]
 ```python
@@ -794,4 +794,73 @@ class Solution:
             # odd(k) = odd(>=k) - odd(>=k+1)
             res += left1 - left2
         return res
+```
+### [3306. Count of Substrings Containing Every Vowel and K Consonants II](https://leetcode.com/problems/count-of-substrings-containing-every-vowel-and-k-consonants-ii/)
+We want to find  the total number of substrings of `word` that contain every vowel (`'a'`, `'e'`, `'i'`, `'o'`, and `'u'`) **at least** once and **exactly** `k` consonants.
+
+`exactly k consonants = at least k consonants - at least k + 1 consonants`
+-> `f(x) - f(x+1)`
+
+```python
+class Solution:
+    def f(self, word: str, k: int) -> int:
+        vowels = {'a', 'e', 'i', 'o', 'u'}
+        cnt = Counter()
+        left = consonants = ans = 0
+        for char in word:
+            # into window
+            if char in vowels:
+                cnt[char] += 1
+            else:
+                consonants += 1
+            # whlie invalid
+            while len(cnt) == 5 and consonants >= k:
+                # shrink window
+                out = word[left]
+                if out in vowels:
+                    cnt[out] -= 1
+                    if cnt[out] == 0:
+                        del cnt[out]
+                else:
+                    consonants -= 1
+                left += 1
+            # update res
+            ans += left
+        return ans
+  
+    def countOfSubstrings(self, word: str, k: int) -> int:
+        # count(consonants=k) = count(consonants>=k) - count(consonants>=k+1)
+        return self.f(word, k) - self.f(word, k + 1)
+```
+### [992. Subarrays with K Different Integers](https://leetcode.com/problems/subarrays-with-k-different-integers/)
+We want to find the number of a **good array** which is is an array where the number of different integers in that array is exactly `k`.
+
+the number of different integers in that array is exactly `k` -> res
+the number of different integers in that array is >= `k` -> `f(x)`
+the number of different integers in that array is >= `k + 1` -> `f(x+1)`
+`res = f(x) = f(x + 1)`
+
+```python
+class Solution:
+    def f(self, nums: List[int], k: int) -> int:
+        visited = Counter()
+        left = ans = 0
+        for right, num in enumerate(nums):
+            # into window
+            visited[num] += 1
+            # while invalid
+            while len(visited) >= k:
+                # shrink window
+                out = nums[left]
+                visited[out] -= 1
+                if visited[out] == 0:
+                    del visited[out]
+                left += 1
+            # update res
+            ans += left
+        return ans
+
+    def subarraysWithKDistinct(self, nums: List[int], k: int) -> int:
+	    # count(diff=k) = count(diff>=k) - count(diff>=k+1)
+        return self.f(nums, k) - self.f(nums, k + 1)
 ```
