add solutions to 1 fixed sliding window problem

--- a/5.1-fixed-sliding-window.md
+++ b/5.1-fixed-sliding-window.md
@@ -76,6 +76,43 @@ class Solution:
         return res if res != float('INF') else 0
 ```
 
+```python
+class Solution:
+    def minSubArrayLen(self, target: int, nums: List[int]) -> int:
+        left = 0
+        window = 0
+        res = inf
+        for right, x in enumerate(nums):
+            # in to window
+            window += x
+            while window >= target:
+                # update res
+                res = min(res, right - left + 1)
+                # out of window
+                window -= nums[left]
+                left += 1
+        return res if res != inf else 0
+```
+
+```python
+class Solution:
+    def minSubArrayLen(self, target: int, nums: List[int]) -> int:
+        left = 0
+        window = 0
+        res = inf
+        for right, x in enumerate(nums):
+            # in to window
+            window += x
+            # out of window
+            while window - nums[left] >= target:
+                window -= nums[left]
+                left += 1
+            # update res
+            if window >= target:
+                res = min(res, right - left + 1)
+        return res if res != inf else 0
+```
+
 # [灵神](https://leetcode.cn/discuss/post/3578981/ti-dan-hua-dong-chuang-kou-ding-chang-bu-rzz7/)
 ## Fixed Sliding Window Basis
 
