add 2 solutions to flexible sliding window

--- a/5.2-flexible-sliding-window.md
+++ b/5.2-flexible-sliding-window.md
@@ -2,8 +2,12 @@
 There are 3 types of flexible sliding window problems:
 1. find longest subarray (maximum length of a substring/subarray)
 2. find shortest subarray (minimum length of a substring/subarray)
-3. find "optimal" subarray
+3. find # of subarray
+	1. the longer is better
+	2. the shorter is better
+	3. find "optimal" subarray
 # Reference [灵神](https://leetcode.cn/discuss/post/3578981/ti-dan-hua-dong-chuang-kou-ding-chang-bu-rzz7/)
+[滑动窗口【基础算法精讲 03】](https://www.bilibili.com/video/BV1hd4y1r7Gq?spm_id_from=333.788.player.switch&vd_source=fb0d94742d314c399a695c3ec1b7dc6b)
 
 ## 5.2.1 Flexible Sliding Window Basis (longest)
 
@@ -62,6 +66,24 @@ class Solution:
                 left += 1
             # into window
             visited.add(s[right])
+            # update res
+            res = max(res, right - left + 1)
+        return res
+```
+
+```python
+class Solution:
+    def lengthOfLongestSubstring(self, s: str) -> int:
+        res = 0
+        left = 0
+        cnt = Counter()
+        for right, c in enumerate(s):
+            # in to window
+            cnt[c] += 1
+            # while valid
+            while cnt[c] > 1:
+                cnt[s[left]] -= 1
+                left += 1
             # update res
             res = max(res, right - left + 1)
         return res
@@ -698,7 +720,68 @@ class Solution:
         return [res_left, res_right]
 ```
 
-## 5.2.3 Flexible sliding window (Exact)
+## 5.2.3.1 Find # of subarray (longer is better)
+一般要写 ans += left。
+
+内层循环结束后，[left,right] 这个子数组是不满足题目要求的，但在退出循环之前的最后一轮循环，[left−1,right] 是满足题目要求的。由于子数组越长，越能满足题目要求，所以除了 [left−1,right]，还有 [left−2,right],[left−3,right],…,[0,right] 都是满足要求的。也就是说，当右端点固定在 right 时，左端点在 0,1,2,…,left−1 的所有子数组都是满足要求的，这一共有 left 个。
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/discuss/post/0viNMK/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+| #   | Difficulty                                 | Problems                                                                                                                                                              |                         |
+| --- | ------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------- |
+| 1   | <span style="color: orange;">Medium</span> | [1358. Number of Substrings Containing All Three Characters](https://leetcode.com/problems/number-of-substrings-containing-all-three-characters/)                     | <input type="checkbox"> |
+| 2   | <span style="color: orange;">Medium</span> | [2962. Count Subarrays Where Max Element Appears at Least K Times](https://leetcode.com/problems/count-subarrays-where-max-element-appears-at-least-k-times/)         | <input type="checkbox"> |
+| 3   | <span style="color: orange;">Medium</span> | [3325. Count Substrings With K-Frequency Characters I](https://leetcode.com/problems/count-substrings-with-k-frequency-characters-i/)                                 | <input type="checkbox"> |
+| 4   | <span style="color: orange;">Medium</span> | [2799. Count Complete Subarrays in an Array](https://leetcode.com/problems/count-complete-subarrays-in-an-array/)                                                     | <input type="checkbox"> |
+| 5   | <span style="color: orange;">Medium</span> | [2537. Count the Number of Good Subarrays](https://leetcode.com/problems/count-the-number-of-good-subarrays/)                                                         | <input type="checkbox"> |
+| 6   | <span style="color: red;">Hard</span>      | [3298. Count Substrings That Can Be Rearranged to Contain a String II](https://leetcode.com/problems/count-substrings-that-can-be-rearranged-to-contain-a-string-ii/) | <input type="checkbox"> |
+| 6   | <span style="color: orange;">Medium</span> | [2495. Number of Subarrays Having Even Product](https://leetcode.com/problems/number-of-subarrays-having-even-product/)                                               | <input type="checkbox"> |
+
+
+## 5.2.3.2 Find # of subarray (shorter is better)
+一般要写 ans += right - left + 1。
+
+内层循环结束后，[left,right] 这个子数组是满足题目要求的。由于子数组越短，越能满足题目要求，所以除了 [left,right]，还有 [left+1,right],[left+2,right],…,[right,right] 都是满足要求的。也就是说，当右端点固定在 right 时，左端点在 left,left+1,left+2,…,right 的所有子数组都是满足要求的，这一共有 right−left+1 个。
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/discuss/post/0viNMK/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+| #   | Difficulty                                 | Problems                                                                                                                          |                                 |
+| --- | ------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------- |
+| 1   | <span style="color: orange;">Medium</span> | [713. Subarray Product Less Than K](https://leetcode.com/problems/subarray-product-less-than-k/)                                  | <input type="checkbox" checked> |
+| 2   | <span style="color: green;">Easy</span>    | [3258. Count Substrings That Satisfy K-Constraint I](https://leetcode.com/problems/count-substrings-that-satisfy-k-constraint-i/) | <input type="checkbox">         |
+| 3   | <span style="color: red;">Hard</span>      | [2302. Count Subarrays With Score Less Than K](https://leetcode.com/problems/count-subarrays-with-score-less-than-k/)             | <input type="checkbox">         |
+| 4   | <span style="color: orange;">Medium</span> | [2762. Continuous Subarrays](https://leetcode.com/problems/continuous-subarrays/)                                                 | <input type="checkbox">         |
+| 5   | <span style="color: orange;">Medium</span> | [LCP 68. 美观的花束](https://leetcode.cn/problems/1GxJYY/)                                                                             | <input type="checkbox">         |
+| 6   | <span style="color: orange;">Medium</span> | [2743. Count Substrings Without Repeating Character](https://leetcode.com/problems/count-substrings-without-repeating-character/) | <input type="checkbox">         |
+### [713. Subarray Product Less Than K](https://leetcode.com/problems/subarray-product-less-than-k/)
+```python
+class Solution:
+    def numSubarrayProductLessThanK(self, nums: List[int], k: int) -> int:
+        if k <= 1:
+            return 0
+        left = 0
+        res = 0
+        mul = 1
+
+        for right, num in enumerate(nums):
+            # in to window
+            mul *= num
+            # out of window
+            while mul >= k:
+                mul /= nums[left]
+                left += 1
+            # update res
+            res += right - left + 1
+        return res
+```
+
+## 5.2.3.3 Find the # of subarray (Exact #)
 For example, to calculate the number of subarrays where the sum of elements equals exactly k, the problem can be transformed as follows:
 
 1. Calculate the number of subarrays where the sum of elements is **≥k**.
