reviewed 3 fixed sliding windows

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -52,4 +52,9 @@ Sliding Window:
 	7. left out of window to decrease sum
 	8. update res if == target
 	9. return n - res
-8. 
+
+2025-06-02
+Fixed sliding windows
+1. [1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold](https://leetcode.com/problems/number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold/)
+2. [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)
+3. [2379. Minimum Recolors to Get K Consecutive Black Blocks](https://leetcode.com/problems/minimum-recolors-to-get-k-consecutive-black-blocks/)
