--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -58,3 +58,17 @@ Fixed sliding windows
 1. [1343. Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold](https://leetcode.com/problems/number-of-sub-arrays-of-size-k-and-average-greater-than-or-equal-to-threshold/)
 2. [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)
 3. [2379. Minimum Recolors to Get K Consecutive Black Blocks](https://leetcode.com/problems/minimum-recolors-to-get-k-consecutive-black-blocks/)
+
+2025-06-03
+Fixed Sliding Windows
+1. [2841. Maximum Sum of Almost Unique Subarray](https://leetcode.com/problems/maximum-sum-of-almost-unique-subarray/)
+2. [2461. Maximum Sum of Distinct Subarrays With Length K](https://leetcode.com/problems/maximum-sum-of-distinct-subarrays-with-length-k/)
+3. [1176. Diet Plan Performance](https://leetcode.com/problems/diet-plan-performance/)
+4. [1100. Find K-Length Substrings With No Repeated Characters](https://leetcode.com/problems/find-k-length-substrings-with-no-repeated-characters/)
+	1. store `char:idx` instead of `char:freq`
+	2. if char exists in hashmap
+		1. remove left till left equal to the right index
+	3. add right index to hashmap
+	4. continue if less than k elements
+	5. update res
+	6. remove left
