reviewed 3 fixed sliding windows

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -72,3 +72,9 @@ Fixed Sliding Windows
 	4. continue if less than k elements
 	5. update res
 	6. remove left
+
+2025-06-04
+Fixed Sliding Windows
+1. [1423. Maximum Points You Can Obtain from Cards](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)
+2. [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/
+3. [1652. Defuse the Bomb](https://leetcode.com/problems/defuse-the-bomb/)
