reviewed 1 fixed sliding window

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -78,3 +78,10 @@ Fixed Sliding Windows
 1. [1423. Maximum Points You Can Obtain from Cards](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)
 2. [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/
 3. [1652. Defuse the Bomb](https://leetcode.com/problems/defuse-the-bomb/)
+
+2025-06-05
+some house work need to be done, skipped
+
+2025-06-06
+1. [1151. Minimum Swaps to Group All 1's Together](https://leetcode.com/problems/minimum-swaps-to-group-all-1s-together/)
+	1. hard part is to figure out it is asking to find the min num of 0s in window of num of 1s
