reviewed 2 fix sliding windows and 5 binary searchs

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -76,7 +76,7 @@ Fixed Sliding Windows
 2025-06-04
 Fixed Sliding Windows
 1. [1423. Maximum Points You Can Obtain from Cards](https://leetcode.com/problems/maximum-points-you-can-obtain-from-cards/)
-2. [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/
+2. [1052. Grumpy Bookstore Owner](https://leetcode.com/problems/grumpy-bookstore-owner/)
 3. [1652. Defuse the Bomb](https://leetcode.com/problems/defuse-the-bomb/)
 
 2025-06-05
@@ -85,3 +85,22 @@ some house work need to be done, skipped
 2025-06-06
 1. [1151. Minimum Swaps to Group All 1's Together](https://leetcode.com/problems/minimum-swaps-to-group-all-1s-together/)
 	1. hard part is to figure out it is asking to find the min num of 0s in window of num of 1s
+
+2025-06-07
+Fix Sliding Window
+1. [1852. Distinct Numbers in Each Subarray](https://leetcode.com/problems/distinct-numbers-in-each-subarray/)
+	1. distinct nums in k -> counter/hashmap
+2. [2107. Number of Unique Flavors After Sharing K Candies](https://leetcode.com/problems/number-of-unique-flavors-after-sharing-k-candies/)
+	1. count num of candies
+
+Binary Search
+1. [34. Find First and Last Position of Element in Sorted Array](https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
+2. [35. Search Insert Position](https://leetcode.com/problems/search-insert-position/)
+3. [704. Binary Search](https://leetcode.com/problems/binary-search/)
+4. [744. Find Smallest Letter Greater Than Target](https://leetcode.com/problems/find-smallest-letter-greater-than-target/)
+	1. `ord(char) > ord(target) = ord(char) >= ord(target) + 1`
+5. [2529. Maximum Count of Positive Integer and Negative Integer](https://leetcode.com/problems/maximum-count-of-positive-integer-and-negative-integer/)
+	1. negative = `BS(>=0)`
+	2. positive = BS(>= 1)
+	3. max(negative, n - positive)
+
