--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -101,6 +101,28 @@ Binary Search
 	1. `ord(char) > ord(target) = ord(char) >= ord(target) + 1`
 5. [2529. Maximum Count of Positive Integer and Negative Integer](https://leetcode.com/problems/maximum-count-of-positive-integer-and-negative-integer/)
 	1. negative = `BS(>=0)`
-	2. positive = BS(>= 1)
+	2. positive = `BS(>= 1)`
 	3. max(negative, n - positive)
 
+2025-06-08
+Binary Search
+1. [2529. Maximum Count of Positive Integer and Negative Integer](https://leetcode.com/problems/maximum-count-of-positive-integer-and-negative-integer/)
+2. [2300. Successful Pairs of Spells and Potions](https://leetcode.com/problems/successful-pairs-of-spells-and-potions/)
+	1. `a x b >= c 
+	2. -> `b >= c / a`
+	3. -> `a >= c / b`
+	4. I made a mistake on using `b >= c // a`, it does not work for the cases of `c % a !=0`
+3. [2563. Count the Number of Fair Pairs](https://leetcode.com/problems/count-the-number-of-fair-pairs/)
+	1. https://www.bilibili.com/video/BV1G14y1S7cf/?spm_id_from=333.337.search-card.all.click&vd_source=fb0d94742d314c399a695c3ec1b7dc6b
+	2. `lower <= nums[i] + nums[j] <= upper`
+	3. `lower - nums[i] <= nums[j] <= upper - nums[i]`
+	4. upper:
+		1. `nums[j] <= upper - nums[i]`
+	5. lower:
+		1. `lower <= nums[i] + nums[j]
+		2. `nums[j] + nums[i] >= lower`
+		3. `nums[j] + nums[i] >= lower`
+		4. invalid case -> `nums[j] + nums[i] < lower`
+		5. `nums[j] + nums[i] <= lower - 1`
+		6. `nums[j] <= lower - 1 - nums[i]`
+	6. still don't understand... review it tomorrow again
