did 3 binary search problems

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -126,3 +126,38 @@ Binary Search
 		5. `nums[j] + nums[i] <= lower - 1`
 		6. `nums[j] <= lower - 1 - nums[i]`
 	6. still don't understand... review it tomorrow again
+
+2025-06-09
+Binary Search
+1. [2563. Count the Number of Fair Pairs](https://leetcode.com/problems/count-the-number-of-fair-pairs/)
+```python
+        # lower <= nums[i] + nums[j] <= upper
+        # -> sorting
+  
+        # we fixed nums[i] and look for the nums[j] where
+        # lower - nums[i] <= nums[j]
+        # and
+        # nums[j] <= upper - nums[i]
+  
+        # [lower - nums[i], upper - nums[j]]
+  
+        # lower bound of >= lower - nums[i]
+        # -> bisect_left(nums, lower - nums[i], i + 1, n)
+
+        # upper bound of < upper - nums[j]
+        # -> bisect_right(nums, upper - nums[i], i + 1, n)
+
+        # num of valid nums[j] is
+        # idx of upper bound - idx of lower bound
+```
+
+2025-06-10
+Binary Search
+1. [2563. Count the Number of Fair Pairs](https://leetcode.com/problems/count-the-number-of-fair-pairs/)
+2. [275. H-Index II](https://leetcode.com/problems/h-index-ii/)
+	1. `citations[i] >= n - i`
+3. [875. Koko Eating Bananas](https://leetcode.com/problems/koko-eating-bananas/)
+	1. `len(piles) <= h`
+	2. `l = 0` instead of `l = -1` because `k` or `mid` could be `0` if `l = -1`
+	3. we want to check for  `h = ceil(pile / k )`
+	4. `if h > h` => `k` too small, move left to check right part
