--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -161,3 +161,11 @@ Binary Search
 	2. `l = 0` instead of `l = -1` because `k` or `mid` could be `0` if `l = -1`
 	3. we want to check for  `h = ceil(pile / k )`
 	4. `if h > h` => `k` too small, move left to check right part
+
+2025-06-12
+Binary Search
+1. [875. Koko Eating Bananas](https://leetcode.com/problems/koko-eating-bananas/)
+2. [2187. Minimum Time to Complete Trips](https://leetcode.com/problems/minimum-time-to-complete-trips/)
+	1. key point is to figure out
+		1. `l, r = 0, max(time) * totalTrips`
+		2. `good condition is the sum >= totalTrips`
