review 1, learning 1 binary search

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -169,3 +169,16 @@ Binary Search
 	1. key point is to figure out
 		1. `l, r = 0, max(time) * totalTrips`
 		2. `good condition is the sum >= totalTrips`
+
+2025-06-13
+Binary Search
+1. [2187. Minimum Time to Complete Trips](https://leetcode.com/problems/minimum-time-to-complete-trips/)
+2. [2861. Maximum Number of Alloys](https://leetcode.com/problems/maximum-number-of-alloys/)
+	1. `price = (composition * num to make - stock) * cost`
+	2. `good = price <= budget`
+	3. we move left because all num on the left of left <= budget
+	4. for each composition
+		1. binary search to guess the k
+		2. check `good = price <= budge` then move left
+		3. update res to be the bigger number
+	5. ? why `r = min(stock) + budget`?
