reviewed 2 binary search

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -182,3 +182,31 @@ Binary Search
 		2. check `good = price <= budge` then move left
 		3. update res to be the bigger number
 	5. ? why `r = min(stock) + budget`?
+
+2025-06-14
+Binary Search
+1. [2187. Minimum Time to Complete Trips](https://leetcode.com/problems/minimum-time-to-complete-trips/)
+	1. min k can be 0 for sure
+	2. max  k can be `min(time) * totalTrips` because
+		1. we let the fastest bus to finish all the trips
+		2. any other bus we have will just give us smaller k which is better res
+	3. good condition is
+		1. `sum(m // t for t in time) >= totalTrips`
+2. [2861. Maximum Number of Alloys](https://leetcode.com/problems/maximum-number-of-alloys/)
+	1. k is the num of alloys we can make
+	2. min k is 0 for sure
+	3. max k is `min(stock) + budget + 1`
+		1. set composition and cost to 1s, ignoring stock
+		2. if budget is 100, our max k is 100
+		3. considering stock, let's say 10 stock
+		4. the max k is 100 + 10 which is `budget + stock`
+		5. since I like to do binary search with `range(l, r)`, need to `+1`
+		6. `max(stock)` will work as well, but with min can reflect tighter constraint
+	4. good condition
+		1. `for each composition[i][j], stock, cost`
+		2. calculate the cost
+			1. `max((base * mid - s) * c, 0)`
+			2. sometime it would be negative  number because of big s, so using `max(x, 0)`
+		3. return `cost <= budget`
+3. [2439. Minimize Maximum of Array](https://leetcode.com/problems/minimize-maximum-of-array/)
+	1. learning...
