learnt 4 binary searches, still learning #33

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -210,3 +210,84 @@ Binary Search
 		3. return `cost <= budget`
 3. [2439. Minimize Maximum of Array](https://leetcode.com/problems/minimize-maximum-of-array/)
 	1. learning...
+
+2025-06-15
+Binary Search
+1. [2439. Minimize Maximum of Array](https://leetcode.com/problems/minimize-maximum-of-array/)
+	1. `nums[i] -= 1 and nums[i -  1] += 1` means we can only move num from the end to the start
+	2. at the end, the start `nums[0]` will be the min max of arr
+	3. we can guess this number `k` with binary search
+	4. range of k will be `(0, max(nums))` which is `[-1, max(nums) + 1]`
+	5. good/check condition
+		1. keep track of the `carry`
+		2. for each num in nums, from `n - 1` to `0`
+		3. check if `nums[0] + carry <= m`
+2. [2517. Maximum Tastiness of Candy Basket](https://leetcode.com/problems/maximum-tastiness-of-candy-basket/)
+	1. we guess the max `m` with binary search
+	2. think greedily, we need to sort the array, so we can pick the smallest candy,
+	3. and it will always produce the max gap with others
+	4. `m` in the range of `(-1, max(price) + 1) = (-1, price[-1] + 1)`
+	5. good condition:
+		1.  keep track of 
+			1. basket count: `cnt=1`
+			2. last price: `lp=price[0]`
+		2. go through each price to check if the  `gap(lp, p) >= m`
+			1. add to cnt and update last price
+		3. check if `cnt >= k`
+3. [162. Find Peak Element](https://leetcode.com/problems/find-peak-element/)
+	1. find any of the peaks
+	2. good condition:
+		1. if `nums[mid] > nums[mid + 1]`, then it might be a peak
+	3. we can move `r = mid` if good
+	4. min is 0
+	5. max is `n - 2` because a peak has to have one element on the right which is `n-1`
+	6. so range is `[0, n - 2]` which is `(-1, n - 1)`
+	7. `l = -1, r = n - 1`
+4. [153. Find Minimum in Rotated Sorted Array](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/)
+	1. because it's sorted, we assume the last num is a bigger element than mid
+	2. if `nums[mid] < nums[-1]`
+		1. no matter if it's rotated or not, if mid is smaller than the last, we should move the right to mid
+5. [33. Search in Rotated Sorted Array](https://leetcode.com/problems/search-in-rotated-sorted-array/)
+	1. good condition:
+		1. still learning...
+```
+        # 1. r = mid
+        # mid > end, end < target, target <= mid
+        # [3,4,5,6,7,8,0,1,2]
+        #      ^   ^
+        #      t   mid
+  
+        # 2. r = mid
+        # mid <= end, end < target, target > mid
+        # [3,4,5,6,7,8,0,1,2]
+        #      ^         ^
+        #      t        mid
+
+        # 3. l = mid
+        # mid > end, end < target, target > mid
+        # [3,4,5,6,7,8,0,1,2]
+        #    ^ ^
+        #  mid t
+  
+        # 4. r = mid
+        # mid <= end, end > target, target <= mid
+        # [0,1,2,3,4,5,6,7,8]
+        #            ^   ^
+        #            t  mid
+  
+        # 5. l = mid
+        # mid < end, end > target, target > mid
+        # [0,1,2,3,4,5,6,7,8]
+        #      ^     ^
+        #     mid    t
+
+		why???
+        def good(m: int) -> int:
+            end = nums[-1]
+            middle = nums[m]
+            if middle > end:
+                return end < target and target <= middle
+            else:
+                return end < target or target <= middle
+```
+
