reviewed 33 conditions for binary search

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -250,44 +250,51 @@ Binary Search
 5. [33. Search in Rotated Sorted Array](https://leetcode.com/problems/search-in-rotated-sorted-array/)
 	1. good condition:
 		1. still learning...
-```
-        # 1. r = mid
-        # mid > end, end < target, target <= mid
-        # [3,4,5,6,7,8,0,1,2]
-        #      ^   ^
-        #      t   mid
-  
-        # 2. r = mid
-        # mid <= end, end < target, target > mid
-        # [3,4,5,6,7,8,0,1,2]
-        #      ^         ^
-        #      t        mid
 
-        # 3. l = mid
-        # mid > end, end < target, target > mid
-        # [3,4,5,6,7,8,0,1,2]
-        #    ^ ^
-        #  mid t
-  
-        # 4. r = mid
-        # mid <= end, end > target, target <= mid
-        # [0,1,2,3,4,5,6,7,8]
-        #            ^   ^
-        #            t  mid
-  
-        # 5. l = mid
-        # mid < end, end > target, target > mid
-        # [0,1,2,3,4,5,6,7,8]
-        #      ^     ^
-        #     mid    t
-
-		why???
+2025-06-16
+1. [33. Search in Rotated Sorted Array](https://leetcode.com/problems/search-in-rotated-sorted-array/)
+	1. good condition:
+		1. figure out `mid vs target`, which is on left, which is on right, we want to check for the condition where we set `r = mid`
+		2. we want to find when `mid >= target` so we can set `r = mid`
+			1. `mid > end`
+				1. -> `mid` has to be in 1st sorted part
+				2. `target` has to be in as well  -> `target > end`
+				3. and `mid >= target`, otherwise, `mid` will be on the left or `t` 
+				4. => `target > end and mid >= target`
+			2. `mid <= end`
+				1. -> `mid` in the 2nd sorted part, or the whole array is sorted
+				2. -> `target` can be in 1st or 2nd part
+				3. if `target` in 1st 
+					1. -> `target > end` so it's on 1st
+					2. -> `mid` has to be on the right of `target`
+				4. if `target` in 2nd
+					1. -> `mid` has to be bigger than `target` 
+					2. -> `mid >= target`
+				5. => `target > end` or `mid >= target`
+	2. key points:
+		1. a num `x` on 1st sorted
+			1. -> `x > end`
+		2. to set `r = mid`
+			1. -> `mid >= target`
+```python
+        # is mid on the right of target 
+        # -> set r = mid
         def good(m: int) -> int:
             end = nums[-1]
             middle = nums[m]
+            # mid on 1st sorted, target has to be in 1st
             if middle > end:
-                return end < target and target <= middle
+	            # target has to be on 1st sorted as well
+	            # -> target > end
+	            # mid has to be bigger than target
+	            # -> mid >= target
+                return target > end and middle >= target
+            # mid on 2nd sorted, target can be on 1st or 2nd
             else:
-                return end < target or target <= middle
+	            # target on 1st sorted
+	            # -> target > end
+	            # or
+	            # target on 2nd sorted
+	            # -> target <= middle
+                return target > end or target <= middle
 ```
-
