--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -298,3 +298,12 @@ Binary Search
 	            # -> target <= middle
                 return target > end or target <= middle
 ```
+
+2025-06-17
+1. [33. Search in Rotated Sorted Array](https://leetcode.com/problems/search-in-rotated-sorted-array/)
+2. [74. Search a 2D Matrix](https://leetcode.com/problems/search-a-2d-matrix/)
+	1. `[1,3,5,7,10,11,16,20,23,30,34,60]`
+	2. `a[i]=a[9]=30, matrix[j][k]=matrix[2][1]=30`
+	3. `n = len(matrix[0]) = 4`
+	4. `j = ceil(i / n), k = i % n`
+	5. `a[i] = matrix[ceil(i/n)][i % n]`
