learnt 1 2D binary search problem

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -307,3 +307,31 @@ Binary Search
 	3. `n = len(matrix[0]) = 4`
 	4. `j = ceil(i / n), k = i % n`
 	5. `a[i] = matrix[ceil(i/n)][i % n]`
+
+2025-06-18
+1. [1901. Find a Peak Element II](https://leetcode.com/problems/find-a-peak-element-ii/)
+	1. num `>` than all adjacent nums
+	2. no two adjacent nums are equal
+	3. brute force:
+		1. start from top left, travel to the bigger adjacent num
+	4. worst case the path will be a snake as below
+		`[-1,-1,-1,-1,-1,-1]`
+		`[-1, 2, 3, 4, 5,-1]`
+		`[-1, 1, 2, 1, 6,-1]`
+		`[-1,10, 9, 8, 7,-1]`
+		`[-1,11, 1, 2, 1,-1]`
+		`[-1,12,13,14,15,-1]`
+	5. we do binary search from the mid row
+	6. if the max of this row < than the one below it (e.g. 10, 11)
+	7. -> there must be a path from the adjacent num to the biggest num (e.g. 11 to 15) in the rows below
+	8. if the max of this row > than the one below it
+	9. -> there must be a path to the biggest num in the rows above
+	10. range:
+		1. left is 0 which is clear
+		2. right is col - 2, because the biggest has to be in the first or last row, if binary search keep going top or bot
+	11. `[0, len(mat) - 2] -> (-1, len(mat) - 1)`
+	12. good condition:
+		1. `max_ = max(mat[mid])`
+		2. `max_col_idx = mat[mid].index(max_)`
+		3. `mat[mid + 1][max_col_idx] < max_`
+			1. `r = mid`
