--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -309,6 +309,7 @@ Binary Search
 	5. `a[i] = matrix[ceil(i/n)][i % n]`
 
 2025-06-18
+Binary Search
 1. [1901. Find a Peak Element II](https://leetcode.com/problems/find-a-peak-element-ii/)
 	1. num `>` than all adjacent nums
 	2. no two adjacent nums are equal
@@ -335,3 +336,19 @@ Binary Search
 		2. `max_col_idx = mat[mid].index(max_)`
 		3. `mat[mid + 1][max_col_idx] < max_`
 			1. `r = mid`
+
+2025-06-18
+Binary Search
+1. [154. Find Minimum in Rotated Sorted Array II](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array-ii/)
+	1. left is `-1`
+	2. right is `n = len(nums) - 1`
+	3. range is `(-1, n - 1]`
+		1. why we need to include the last element, because the first condition is checking `nums[r]`
+	4. when to move r?
+		1. if `mid == right ``
+			1. -> `r -= 1`, to skip duplicates
+		2. if `mid < right`, meaning mid is in an increasing part
+			1. -> `r = mid`
+		3. if `mid >= right`, meaning mid is in the 1st part of an rotated part
+			1. -> `l = mid`
+	
