reviewed 3 binary searches

--- a/daily-records/2025-06.md
+++ b/daily-records/2025-06.md
@@ -337,7 +337,7 @@ Binary Search
 		3. `mat[mid + 1][max_col_idx] < max_`
 			1. `r = mid`
 
-2025-06-18
+2025-06-19
 Binary Search
 1. [154. Find Minimum in Rotated Sorted Array II](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array-ii/)
 	1. left is `-1`
@@ -352,3 +352,12 @@ Binary Search
 		3. if `mid >= right`, meaning mid is in the 1st part of an rotated part
 			1. -> `l = mid`
 	
+2025-06-20
+Binary Search
+1. [154. Find Minimum in Rotated Sorted Array II](https://leetcode.com/problems/find-minimum-n-rotated-sorted-array-ii/)
+2. [1901. Find a Peak Element II](https://leetcode.com/problems/find-a-peak-element-ii/)
+	1. made mistake on setting the range, using `r = n` instead of `n - 1`
+3. [33. Search in Rotated Sorted Array](https://leetcode.com/problems/search-in-rotated-sorted-array/)
+	1. made mistake on good condition
+		1. using `mid` instead of `middle`
+		2. checking `middle > target` instead of `middle >= target`
